# pass

./: Cargo.toml  README.md  build.rs  flake.nix
content/: app.gresource.xml  field-list.ui  main-window.ui  password-list.ui
resources/: resources.gresource.xml  window.ui
src/: main.rs  utils.rs
src/field_list/: mod.rs  template.rs
src/login_object/: imp.rs  mod.rs
src/main_window/: mod.rs  template.rs
src/password_item/: mod.rs  template.rs
src/password_list/: mod.rs  template.rs
src/window/: imp.rs  mod.rs
