[package]
name = "passmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
glib-build-tools = "0.16.0"

[dependencies.adw]
package = "libadwaita"
version = "0.2.0"
features = ["v1_2"]

[dependencies.gtk]
package = "gtk4"
version = "0.5.1"

[dependencies]
glib = "0.16.2"
gio = "0.16.2"
